@@ -1,58 +1,0 @@
-#!/bin/sh
-
-# generate OpenChariot configuration and dump it to the console such that one
-# can call $(ocutil-getconfig) and have all the appropriate environment
-# variables setup correctly.
-
-# scripts check for OC_MAGIC equal to OpenChariot, and panic if it is not, to
-# ensure they were able to load the configuration appropriately. This line
-# should not be modified.
-echo 'export OC_MAGIC=OpenChariot'
-
-# Files named like $reponame.newgit placed in this directory are created as new
-# git repositories by ocutil-process-gitspool.
-echo 'export OC_GITSPOOL=/var/openchariot/gitspool'
-
-# Desired permissions for the gitspool, this shoul dusually be 775.
-echo 'export OC_GITSPOOL_PERM=775'
-
-# The git user account, should almost always be 'git'.
-echo 'export OC_GIT_USER=git'
-
-# The git group, should almost always be 'git'.
-echo 'export OC_GIT_GROUP=git'
-
-# The directory in which to place git repositories.
-echo 'export OC_GIT_DIR=/git'
-
-# The user group which should be able to write into OC_GITSPOOL.
-echo 'export OC_GITSPOOL_GROUP=openchariot'
-
-# The directory on your HTTP server where OpenChariot should do it's thing.
-# This is usually some subdirectory of /usr/local/www/data on BSD, and
-# some subdirectory of /var/www on Linux.
-echo 'export OC_WWW_ROOT=/usr/local/www/data'
-
-# User account which should own OC_WWW_ROOT
-echo 'export OC_WWW_USER=www'
-
-# Group which should own OC_WWW_ROOT
-echo 'export OC_WWW_GROUP=www'
-
-# Desired permissions in octal for OC_WWW_ROOT
-echo 'export OC_WWW_PERM=755'
-
-# Desired log file location, used by ocutil-spooler
-echo 'export OC_LOGFILE=/var/log/openchariot.log'
-
-# OpenChariot version, used in some logs and other output. You should not
-# change this.
-echo 'export OC_VERSION=0.0.2-git'
-
-# If "YES", OpenChariot will setup your git repositories for "dumb" HTTP clones
-echo 'export OC_GIT_DUMB_HTTP=YES'
-
-# Path relative to OC_WWW_ROOT where dumb HTTP repositories should live. You
-# should make this directory browse-able in your webserver.
-echo 'export OC_GIT_DUMB_HTTP_DIR=/git'
-
