@@ -9,12 +9,6 @@ if [ $? -eq 0 ] ; then
 	exit 1
 fi
 
-$(ocutil-getconfig)
-if [ $OC_MAGIC != "OpenChariot" ] ; then
-	echo "PANIC: OC_MAGIC not defined, is ocutil-getconfig in PATH?"
-	exit 1
-fi
-
 echo "$0 started at $(date)" >> $OC_LOGFILE
 ocutil-validate-dep >> $OC_LOGFILE 2>&1
 if [ $? -ne 0 ] ; then
