@@ -2,12 +2,6 @@
 
 # update git-arr output 
 
-$(ocutil-getconfig)
-if [ $OC_MAGIC != "OpenChariot" ] ; then
-	echo "PANIC: OC_MAGIC not defined, is ocutil-getconfig in PATH?"
-	exit 1
-fi
-
 CONFIG_FILE=$OC_PREFIX/etc/openchariot/git-arr.conf
 
 git-arr --config "$CONFIG_FILE" generate --output "$OC_WWW_ROOT/git-arr"
