@@ -2,12 +2,6 @@
 
 # Make sure OpenChariot's directories exist, if not create them.
 
-$(ocutil-getconfig)
-if [ $OC_MAGIC != "OpenChariot" ] ; then
-	echo "PANIC: OC_MAGIC not defined, is ocutil-getconfig in PATH?"
-	exit 1
-fi
-
 if [ ! -d "$OC_GIT_DIR" ] ; then
 	mkdir -p "$OC_GIT_DIR"
 	chown "$OC_GIT_USER:$OC_GIT_GROUP" "$OC_GIT_DIR"
