@@ -1,0 +1,14 @@
+OC_MAGIC=OpenChariot
+OC_GITSPOOL=/var/openchariot/gitspool
+OC_GITSPOOL_PERM=775
+OC_GIT_USER=git
+OC_GIT_GROUP=git
+OC_GIT_DIR=/git
+OC_GITSPOOL_GROUP=openchariot
+OC_WWW_ROOT=/usr/local/www/data
+OC_WWW_USER=www
+OC_WWW_GROUP=www
+OC_WWW_PERM=755
+OC_LOGFILE=/var/log/openchariot.log
+OC_GIT_DUMB_HTTP=YES
+OC_GIT_DUMB_HTTP_DIR=/git
